# squiral

./: .flake8  .gitignore  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributing.md  LICENSE  README.md  pyproject.toml  pytest.ini
.claude/skills/check/: SKILL.md
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov.yml  python-package.yml  python-publish.yml
.github/workflows/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  PULL_REQUEST_TEMPLATE.md
squiral/: __init__.py  __main__.py  main.py  squiral.py
tests/: test_main.py  test_squiral.py  testdata_squiral.py
