[tool.poetry]
name = "squiral"
version = "0.4.5"
description = "squiral - square spiral"
authors = ["SADIK KUZU <sadikkuzu@hotmail.com>"]
homepage = "https://github.com/sadikkuzu/squiral"
readme = "README.md"
license = "MIT"
packages = [{include = "squiral"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
squiral = "squiral.main:main_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
