[tool.poetry]
name = "squiral"
version = "0.6.0"
description = "squiral - square spiral"
authors = ["SADIK KUZU <sadikkuzu@hotmail.com>"]
homepage = "https://github.com/sadikkuzu/squiral"
readme = "README.md"
license = "MIT"
packages = [{include = "squiral"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
squiral = "squiral.main:main_cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
